@@ -2,6 +2,7 @@
 * StateS v. 0.3 *
 *****************
 
+-(unreleased)- V 0.3.C - Small UI enhancements; Allow drag-and-dropping files on UI to load.
 - 2015-12-13 - V 0.3.B - VHDL export now correctly handles transition conditions; Began adressing output generation in VHDL export; More information from verifier tool.
 - 2015-12-06 - V 0.3.A - Allowed actions kinds is now better handled + better rendering; Enhancments to range and bit adressing in signals; Allow constant definition in equation.
 - 2015-11-15 - V 0.3.9 - Corrected machine color update on begin/end simulation; Moving a graphic element now sets unsaved mode; Can now set signal size and initial value at creation; Added a range adressing tool to act on specific bits from a vector; Added concanetation operator.
